--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -230,7 +230,7 @@
         }
 
         .contact-form button {
-            background: #e60000;
+            background: #333;
             color: #fff;
             padding: 15px 30px;
             border: none;
@@ -245,9 +245,9 @@
         }
 
         footer {
-            background: #333;
+            background: 100%;
             color: #fff;
-            text-align: center;
+            text-align: right;
             padding: 20px 0;
         }
 
@@ -319,7 +319,9 @@
     </header>
 
     <section class="cctv-image">
-        <img src="https://images.unsplash.com/photo-1628535479591-c1b0b3e1b2b6?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="CCTV Camera">
+        <img src="https://images.unsplash.com/photo-1516321165247-4aa89a48d5df?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" 
+             alt="CCTV Camera" 
+             onerror="this.src='https://via.placeholder.com/300x200?text=CCTV+Camera+Placeholder';">
     </section>
 
     <section id="hero" class="hero">
